[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/caja.png" type="Texture" id=1]
[ext_resource path="res://Caja/Caja.gd" type="Script" id=2]
[ext_resource path="res://Sound/smb_coin.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "cajaRun"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr_caja:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "cajaStop"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr_caja:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 1 )

[node name="Caja" type="KinematicBody2D" groups=[
"caja",
]]
collision_layer = 4
script = ExtResource( 2 )

[node name="spr_caja" type="Sprite" parent="."]
position = Vector2( 16, -16 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, -16 )
shape = SubResource( 1 )

[node name="cajaPlayer" type="AnimationPlayer" parent="."]
anims/cajaRun = SubResource( 2 )
anims/cajaStop = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 1 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, -48 )

[node name="coin_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
